--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
         <title>new one</title>
     </head>
     <body>
+        <p> new para </p>
     </body>
 </html>
