--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>new one</title>
-    </head>
-    <body>
-        <p> new para </p>
-    </body>
+	<head>
+		<title>Hank Quinlan, Horrible Cop</title>
+	</head>
+	<body>
+        		<h1>Hi there, I'm Inigio Montoya</h1>
+				<p>Prepare to dye</p>
+	</body>
 </html>
