--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			width: 100%;
 			padding-bottom: 10010px;
 			margin-bottom: -10000px;
-			background: #fff;
+			background: #ffccff;
 		}
 
 		/* Aesthetics */
